services/user-service/src/main/resources/infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-service
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
